    by setting "case_insensitive=False" on 
    create_engine().  [ticket:2423]

  - [feature] The "unconsumed column names" warning emitted
    when keys are present in insert.values() or update.values()
    that aren't in the target table is now an exception.
    [ticket:2415]

  - [feature] Added "MATCH" clause to ForeignKey,
    ForeignKeyConstraint, courtesy Ryan Kelly.
    [ticket:2502]

  - [feature] select() features a correlate_except()
    method, auto correlates all selectables except those
    passed.

  - [bug] All of UniqueConstraint, ForeignKeyConstraint,
    CheckConstraint, and PrimaryKeyConstraint will
    attach themselves to their parent table automatically
    when they refer to a Table-bound Column object directly
    (i.e. not just string column name), and refer to
    one and only one Table.   Prior to 0.8 this behavior
    occurred for UniqueConstraint and PrimaryKeyConstraint,
    but not ForeignKeyConstraint or CheckConstraint.
    [ticket:2410]

  - [bug] column.label(None) now produces an 
    anonymous label, instead of returning the
    column object itself, consistent with the behavior
    of label(column, None).  [ticket:2168]

- sqlite
  - [feature] the SQLite date and time types
    have been overhauled to support a more open
    ended format for input and output, using 
    name based format strings and regexps.  A
    new argument "microseconds" also provides
    the option to omit the "microseconds" 
    portion of timestamps.  Thanks to 
    Nathan Wright for the work and tests on
    this.  [ticket:2363]

- mssql
  - [bug] removed legacy behavior whereby 
    a column comparison to a scalar SELECT via 
    == would coerce to an IN with the SQL server
    dialect.  This is implicit
    behavior which fails in other scenarios
    so is removed.  Code which relies on this
    needs to be modified to use column.in_(select)
    explicitly.  [ticket:2277]

- postgresql

  - [feature] postgresql.ARRAY features an optional